--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -28,7 +28,7 @@
     <button type="submit">送出註冊</button>
     </form>
     <p>
-        {{message}}
+        <span style="color:red">{{message}}</span>
     </p>
     
 </body>
