--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -4,23 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>首頁</title>
+    <title>登入頁面</title>
 </head>
 
 <body>
-    <h1>首頁</h1>
+    <h1>登入頁面</h1>
     <form action="" method="POST">
         {% csrf_token %}
         <p>
             <label for="username"></label>
             <b>帳號:</b><input type="text" name="username" id="username"><br>
             <label for="password"></label>
-            <b>密碼:</b><input type="text" name="password" id="password"><br>
+            <b>密碼:</b><input type="password" name="password" id="password"><br>
         </p>
         <input type="submit" value="登入" name="login">
         <input type="submit" value="註冊" name="register">
         <input type="reset" value="重置" name="reset">
-    </form>
+    </form><br>
+    <span style="color:red">{{message}}</span>
 </body>
 
 </html>
